--- a/formatting.html
+++ b/formatting.html
@@ -13,5 +13,14 @@
     <p>This is <b>important</b></p>
     <p>This is <strong>important</strong></p>
     <p>This is <em>important</em></p>
+
+
+    <ul>
+        <li>b ; strong</li>
+        <li>i ; em</li>
+        <li>sub, sup</li>
+        <li>del , mark </li>
+    </ul>
+    <p>H<sub>2</sub>O</p>
 </body>
 </html>
