--- a/formatting.html
+++ b/formatting.html
@@ -22,5 +22,15 @@
         <li>del , mark </li>
     </ul>
     <p>H<sub>2</sub>O</p>
+    <p>
+        <blockquote cite="elion mask">
+            this is my quote 
+        </blockquote>
+    </p>
+
+    <abbr title="Hyper Text Markup Language">HTML</abbr>
+    <address>What to do</address>
+    <cite></cite>
+    <bdo dir="rtl">Hitesh</bdo>
 </body>
 </html>
