--- a/head.html
+++ b/head.html
@@ -21,5 +21,6 @@
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ut illum modi sequi reprehenderit distinctio sint, beatae possimus eveniet quidem.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem dolores quasi praesentium, sunt cum tenetur autem sapiente asperiores, culpa doloremque delectus veritatis quod harum, alias iure ea iusto. Eveniet, a?</p>
+    <p>This page is about Heading</p>
 </body>
 </html>
